--- a/tv-calango-frontend/public/manifest.json
+++ b/tv-calango-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "TV Calango",
+  "name": "TV Calango - Documentários, Filmes, Cursos e Jornalismo",
   "icons": [
     {
       "src": "favicon.ico",
